update script tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <link rel='stylesheet' href='style.css' />
-    <script src='script.js'></script>
+    <script type="text/javascript" src="script.js"></script>
 
     <center>
       <img src="https://i.imgur.com/tWerAps.png">
