--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
   <head>
+  <title>Daily Quest Tracker</title>
+   <link rel="shortcut icon" type="image/png" href="https://dappervolk.com/favicon.ico"/>
     <link rel='stylesheet' href='style.css' />
     <script type="text/javascript" src="script.js"></script>
   </head>
@@ -9,29 +11,32 @@
   <body>
 <center>
       <img src="https://i.imgur.com/tWerAps.png">
-      <h3><i>Daily Quest Tracker</i></h3>
+      <div class="banner">
+      <h1>Daily Quest Tracker</h1>
+      </div>
     </center>
+    <br>
     <center>
       <h2>Louise Hill</h2>
     </center>
     <center>
       <div>
-        <h1>Bearnard</h1>
+        <h3>Bearnard</h3>
         <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
         <br><br>
-        <h1>Buli</h1>
+        <h3>Buli</h3>
         <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
         <br><br>
-        <h1>Calbet</h1>
+        <h3>Calbet</h3>
         <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
         <br><br>
-        <h1>Old Farmhand</h1>
+        <h3>Old Farmhand</h3>
         <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
         <br><br>
-        <h1>Lilia</h1>
+        <h3>Lilia</h3>
         <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
         <br><br>
-        <h1>Fantasia</h1>
+        <h3>Fantasia</h3>
         <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
       </div>
     </center>
@@ -43,22 +48,22 @@
         <center>
           <h2>Three's Forest</h2>
         </center>
-        <h1>Trout</h1>
+        <h3>Trout</h3>
         <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
         <br><br>
-        <h1>Irin</h1>
+        <h3>Irin</h3>
         <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
         <br><br>
-        <h1>Magdalene</h1>
+        <h3>Magdalene</h3>
         <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
         <br><br>
-        <h1>Barclay</h1>
+        <h3>Barclay</h3>
         <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
         <br><br>
-        <h1>Glume</h1>
+        <h3>Mycel</h3>
         <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
         <br><br>
-        <h1>Mycel</h1>
+        <h3>Glume</h3>
         <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
       </div>
     </center>
