--- a/index.html
+++ b/index.html
@@ -2,71 +2,77 @@
 <html>
 
   <head>
-  <title>Daily Quest Tracker</title>
-   <link rel="shortcut icon" type="image/png" href="https://dappervolk.com/favicon.ico"/>
+    <title>Daily Quest Tracker</title>
+    <link rel="shortcut icon" type="image/png" href="https://dappervolk.com/favicon.ico" />
     <link rel='stylesheet' href='style.css' />
     <script type="text/javascript" src="script.js"></script>
   </head>
 
   <body>
-<center>
-      <img src="https://i.imgur.com/tWerAps.png">
-      <div class="banner">
-      <h1>Daily Quest Tracker</h1>
+    <center>
+      <div id="wrapperHeader">
+        <div id="header">
+        </div>
       </div>
+      <img src="https://i.imgur.com/8bPJcxD.png">
     </center>
-    <br>
+
     <center>
-      <h2>Louise Hill</h2>
-    </center>
-    <center>
-      <div>
-        <h3>Bearnard</h3>
-        <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-        <br><br>
-        <h3>Buli</h3>
-        <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-        <br><br>
-        <h3>Calbet</h3>
-        <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-        <br><br>
-        <h3>Old Farmhand</h3>
-        <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-        <br><br>
-        <h3>Lilia</h3>
-        <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-        <br><br>
-        <h3>Fantasia</h3>
-        <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+      <div class="trout">
+        <h2>Louise Hill</h2>
+        <div class="npc">
+          <h3>Bearnard</h3>
+          <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
+
+        <div class="npc">
+          <h3>Buli</h3>
+          <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
+
+        <div class="npc">
+          <h3>Calbet</h3>
+          <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
+        <div class="npc">
+          <h3>Old Farmhand</h3>
+          <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
+        <div class="npc">
+          <h3>Lilia</h3>
+          <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+        </div>
+        <div class="npc">
+          <h3>Fantasia</h3>
+          <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+        </div>
       </div>
     </center>
 
-    <br><br><br><br>
-
     <center>
-      <div>
-        <center>
-          <h2>Three's Forest</h2>
-        </center>
-        <h3>Trout</h3>
-        <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-        <br><br>
-        <h3>Irin</h3>
-        <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-        <br><br>
-        <h3>Magdalene</h3>
-        <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-        <br><br>
-        <h3>Barclay</h3>
-        <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-        <br><br>
-        <h3>Mycel</h3>
-        <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-        <br><br>
-        <h3>Glume</h3>
-        <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+      <div class="trout">
+        <h2>Three's Forest</h2>
+        <div class="npc">
+          <h3>Trout</h3>
+          <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+        </div>
+        <div class="npc">
+          <h3>Irin</h3>
+          <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+        </div>
+        <div class="npc">
+          <h3>Magdalene</h3>
+          <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+        </div>
+        <div class="npc">
+          <h3>Barclay</h3>
+          <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+        </div>
+        <div class="npc">
+          <h3>Mycel</h3>
+          <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+        </div>
+        <div class="npc">
+          <h3>Glume</h3>
+          <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+        </div>
       </div>
-      <br><br>
     </center>
   </body>
 
