--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Daily Quest Tracker</title>
     <link rel="shortcut icon" type="image/png" href="https://dappervolk.com/favicon.ico" />
     <link rel='stylesheet' href='style.css' />
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Roboto"
     <script type="text/javascript" src="script.js"></script>
   </head>
 
