added a container for main content

--- a/index.html
+++ b/index.html
@@ -19,31 +19,32 @@
     </center>
 
     <center>
-      <div class="trout">
-        <h2>Louise Hill</h2>
-        <div class="npc">
-          <h3>Bearnard</h3>
-          <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
+      <div class="container">
+        <div class="trout">
+          <h2>Louise Hill</h2>
+          <div class="npc">
+            <h3>Bearnard</h3>
+            <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
 
-        <div class="npc">
-          <h3>Buli</h3>
-          <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
+          <div class="npc">
+            <h3>Buli</h3>
+            <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
 
-        <div class="npc">
-          <h3>Calbet</h3>
-          <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
-        <div class="npc">
-          <h3>Old Farmhand</h3>
-          <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
-        <div class="npc">
-          <h3>Lilia</h3>
-          <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+          <div class="npc">
+            <h3>Calbet</h3>
+            <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
+          <div class="npc">
+            <h3>Old Farmhand</h3>
+            <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
+          <div class="npc">
+            <h3>Lilia</h3>
+            <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+          </div>
+          <div class="npc">
+            <h3>Fantasia</h3>
+            <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+          </div>
         </div>
-        <div class="npc">
-          <h3>Fantasia</h3>
-          <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-        </div>
-      </div>
     </center>
 
     <center>
@@ -73,6 +74,7 @@
           <h3>Glume</h3>
           <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
         </div>
+      </div>
       </div>
     </center>
   </body>
