moved the quest header within the container div
all content is in divs now hoorah

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <body>
     <center>
       <div id="wrapperHeader">
-        <div id="header">
+        <div id="header" alt="Dappervolk logo">
         </div>
       </div>
-      <img src="https://i.imgur.com/8bPJcxD.png">
     </center>
 
     <center>
       <div class="container">
+        <img src="https://i.imgur.com/8bPJcxD.png" alt="Quests">
         <div class="trout">
           <h2>Louise Hill</h2>
           <div class="npc">
