--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="container">
       <center>
-        <img src="https://i.imgur.com/8bPJcxD.png" alt="Quests">
+        <button id="change" onClick="changeColor()"><img src="https://i.imgur.com/8bPJcxD.png" alt="Quests"></button>
         <div class="trout">
           <h2>Louise Hill</h2>
           <div class="npc">
