quest pic into button was stupid idea
scrapped it, workin on div

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 
     <div class="container">
       <center>
-        <button id="change" onClick="changeColor()"><img src="https://i.imgur.com/8bPJcxD.png" alt="Quests"></button>
+        <img src="https://i.imgur.com/8bPJcxD.png" alt="Quests">
         <div class="trout">
+          <div id="color">
+            ☽
+          </div>
           <h2>Louise Hill</h2>
           <div class="npc">
             <h3>Bearnard</h3>
