updated color div to change h2 color
she doesnt toggle but i love her

--- a/index.html
+++ b/index.html
@@ -20,57 +20,59 @@
         <img src="https://i.imgur.com/8bPJcxD.png" alt="Quests">
         <div class="trout">
           <div id="color">
+            <a onclick="toggle()">
             ☽
+            </a>
           </div>
-          <h2>Louise Hill</h2>
+          <h1>Louise Hill</h1>
           <div class="npc">
-            <h3>Bearnard</h3>
+            <h2>Bearnard</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
 
           <div class="npc">
-            <h3>Buli</h3>
+            <h2>Buli</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
 
           <div class="npc">
-            <h3>Calbet</h3>
+            <h2>Calbet</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
           <div class="npc">
-            <h3>Old Farmhand</h3>
+            <h2>Old Farmhand</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
           <div class="npc">
-            <h3>Lilia</h3>
+            <h2>Lilia</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
           </div>
           <div class="npc">
-            <h3>Fantasia</h3>
+            <h2>Fantasia</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
           </div>
         </div>
 
         <div class="trout">
-          <h2>Three's Forest</h2>
+          <h1>Three's Forest</h1>
           <div class="npc">
-            <h3>Trout</h3>
+            <h2>Trout</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
           </div>
           <div class="npc">
-            <h3>Irin</h3>
+            <h2>Irin</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
           </div>
           <div class="npc">
-            <h3>Magdalene</h3>
+            <h2>Magdalene</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
           </div>
           <div class="npc">
-            <h3>Barclay</h3>
+            <h2>Barclay</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
           </div>
           <div class="npc">
-            <h3>Mycel</h3>
+            <h2>Mycel</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
           </div>
           <div class="npc">
-            <h3>Glume</h3>
+            <h2>Glume</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
           </div>
         </div>
