--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel='stylesheet' href='style.css' />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto">
     <script type="text/javascript" src="script.js"></script>
+    <script src="jquery-3.3.1.min.js"></script>
   </head>
 
   <body>
