--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Daily Quest Tracker</title>
+    <title>Daily Quest Tracker by Fel (#575)</title>
     <link rel="shortcut icon" type="image/png" href="https://dappervolk.com/favicon.ico" />
     <link rel='stylesheet' href='style.css' />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto">
