--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <title>Daily Quest Tracker</title>
-    <link rel="shortcut icon" type="image/png" href="favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="fav.png" />
     <link rel='stylesheet' href='style.css' />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto">
     <script type="text/javascript" src="script.js"></script>
