--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 
   <head>
     <title>Daily Quest Tracker</title>
-    <link rel="shortcut icon" type="image/png" href="fav.png" />
-    <link rel='stylesheet' href='style.css' />
+    <link rel="shortcut icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto">
-    <script src="jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css" />
+    <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   </head>
 
   <body>
@@ -23,54 +25,60 @@
           <div id="color">
             ☽
           </div>
-          <h1>Louise Hill</h1>
-          <div class="npc">
+          <a data-toggle="collapse" href="#louise">
+            <h1>Louise Hill</h1>
+            </a>
+          <div class="collapsed show" id="louise">
             <h2>Bearnard</h2>
-            <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
+            <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
 
-          <div class="npc">
+
             <h2>Buli</h2>
-            <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
+            <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
 
-          <div class="npc">
+
             <h2>Calbet</h2>
-            <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
-          <div class="npc">
+            <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+
+
             <h2>Old Farmhand</h2>
-            <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button></div>
-          <div class="npc">
+            <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+
+
             <h2>Lilia</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-          </div>
-          <div class="npc">
+
+
             <h2>Fantasia</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-          </div>
         </div>
-
+          </div>
         <div class="trout">
+            <a data-toggle="collapse" href="#threes">
           <h1>Three's Forest</h1>
-          <div class="npc">
+            </a>
+          <div class="collapsed show" id="threes">
+
             <h2>Trout</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-          </div>
-          <div class="npc">
+
+
             <h2>Irin</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-          </div>
-          <div class="npc">
+
+
             <h2>Magdalene</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-          </div>
-          <div class="npc">
+
+
             <h2>Barclay</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-          </div>
-          <div class="npc">
+
+
             <h2>Mycel</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-          </div>
-          <div class="npc">
+
+
             <h2>Glume</h2>
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
           </div>
