--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+      <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
+<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -18,12 +20,12 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
       <center>
         <img src="https://i.imgur.com/8bPJcxD.png" alt="Quests">
         <div class="trout">
           <div id="color">
-            ☽
+            <i class="fas fa-moon"></i>
           </div>
           <a data-toggle="collapse" href="#louise">
             <h1>Louise Hill</h1>
