--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
             <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
           </div>
         </div>
+          <footer class="footer">
+      <div class="container">
+        <span class="text">visual daily quest tracker by <a href="https://dappervolk.com/profile/575">fel</a> and <a href="https://dappervolk.com/profile/436">rae</a>
+          <br><a href="https://dappervolk.com/forum/topic/6911-visual-daily-quest-tracker">see forum</a></span>
+      </div>
       </center>
     </div>
 
