--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
 <body>
     <div id="wrapperHeader">
-        <div id="header" alt="Dappervolk logo">
+        <div id="header" title="Dappervolk logo">
         </div>
     </div>
 
     <div class="container-fluid">
         <center>
-            <img src="https://i.imgur.com/8bPJcxD.png" alt="Quests">
+            <img src="https://i.imgur.com/8bPJcxD.png" title="Quests">
             <div class="trout">
                 <div id="color">
                     <i class="fas fa-moon"></i>
