--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img src="https://i.imgur.com/8bPJcxD.png" title="Quests">
             <div class="trout">
                 <div id="color">
-                    <i class="fas fa-moon"></i>
+                    <i class="fas fa-moon" title="toggle font color"></i>
                 </div>
                 <a data-toggle="collapse" href="#louise">
                     <h1>Louise Hill</h1>
