--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
             <footer class="footer">
                 <div class="container">
-                    <span class="text">visual daily quest tracker by <a href="https://dappervolk.com/profile/575">fel</a> and <a href="https://dappervolk.com/profile/436">rae</a>
+                    <span class="text-light">visual daily quest tracker by <a href="https://dappervolk.com/profile/575">fel (#575)</a> and <a href="https://dappervolk.com/profile/436">rae (#436)</a>
           <br><a href="https://dappervolk.com/forum/topic/6911-visual-daily-quest-tracker">see forum</a></span>
                 </div>
         </center>
