--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css" />
     <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="script.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
 </head>
@@ -32,29 +32,67 @@
                 </a>
                 <div class="collapsed show" id="louise">
                     <h2>Bearnard</h2>
-                    <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+                    <button onclick="setColor(this)">1</button>
+                    <button onclick="setColor(this)">2</button>
+                    <button onclick="setColor(this)">3</button>
+                    <button onclick="setColor(this)">4</button>
+                    <button onclick="setColor(this)">5</button>
+                    <button onclick="setColor(this)">6</button>
+                    <button onclick="setColor(this)">7</button>
+
 
 
                     <h2>Buli</h2>
-                    <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+                    <button onclick="setColor(this)">1</button>
+                    <button onclick="setColor(this)">2</button>
+                    <button onclick="setColor(this)">3</button>
+                    <button onclick="setColor(this)">4</button>
+                    <button onclick="setColor(this)">5</button>
+                    <button onclick="setColor(this)">6</button>
+                    <button onclick="setColor(this)">7</button>
 
 
                     <h2>Calbet</h2>
-                    <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+                    <button onclick="setColor(this)">1</button>
+                    <button onclick="setColor(this)">2</button>
+                    <button onclick="setColor(this)">3</button>
+                    <button onclick="setColor(this)">4</button>
+                    <button onclick="setColor(this)">5</button>
+                    <button onclick="setColor(this)">6</button>
+                    <button onclick="setColor(this)">7</button>
 
 
                     <h2>Old Farmhand</h2>
-                    <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+                    <button onclick="setColor(this)">1</button>
+                    <button onclick="setColor(this)">2</button>
+                    <button onclick="setColor(this)">3</button>
+                    <button onclick="setColor(this)">4</button>
+                    <button onclick="setColor(this)">5</button>
+                    <button onclick="setColor(this)">6</button>
+                    <button onclick="setColor(this)">7</button>
 
 
                     <h2>Lilia</h2>
-                    <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+                    <button onclick="setColor(this)">1</button>
+                    <button onclick="setColor(this)">2</button>
+                    <button onclick="setColor(this)">3</button>
+                    <button onclick="setColor(this)">4</button>
+                    <button onclick="setColor(this)">5</button>
+                    <button onclick="setColor(this)">6</button>
+                    <button onclick="setColor(this)">7</button>
 
 
                     <h2>Fantasia</h2>
-                    <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+                    <button onclick="setColor(this)">1</button>
+                    <button onclick="setColor(this)">2</button>
+                    <button onclick="setColor(this)">3</button>
+                    <button onclick="setColor(this)">4</button>
+                    <button onclick="setColor(this)">5</button>
+                    <button onclick="setColor(this)">6</button>
+                    <button onclick="setColor(this)">7</button>
                 </div>
             </div>
+
             <div class="trout">
                 <a data-toggle="collapse" href="#threes">
                     <h1>Three's Forest</h1>
@@ -62,27 +100,61 @@
                 <div class="collapsed show" id="threes">
 
                     <h2>Trout</h2>
-                    <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+                    <button onclick="setColor(this)">1</button>
+                    <button onclick="setColor(this)">2</button>
+                    <button onclick="setColor(this)">3</button>
+                    <button onclick="setColor(this)">4</button>
+                    <button onclick="setColor(this)">5</button>
+                    <button onclick="setColor(this)">6</button>
+                    <button onclick="setColor(this)">7</button>
 
 
                     <h2>Irin</h2>
-                    <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+                    <button onclick="setColor(this)">1</button>
+                    <button onclick="setColor(this)">2</button>
+                    <button onclick="setColor(this)">3</button>
+                    <button onclick="setColor(this)">4</button>
+                    <button onclick="setColor(this)">5</button>
+                    <button onclick="setColor(this)">6</button>
+                    <button onclick="setColor(this)">7</button>
 
 
                     <h2>Magdalene</h2>
-                    <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+                    <button onclick="setColor(this)">1</button>
+                    <button onclick="setColor(this)">2</button>
+                    <button onclick="setColor(this)">3</button>
+                    <button onclick="setColor(this)">4</button>
+                    <button onclick="setColor(this)">5</button>
+                    <button onclick="setColor(this)">6</button>
+                    <button onclick="setColor(this)">7</button>
 
 
                     <h2>Barclay</h2>
-                    <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-
+                    <button onclick="setColor(this)">1</button>
+                    <button onclick="setColor(this)">2</button>
+                    <button onclick="setColor(this)">3</button>
+                    <button onclick="setColor(this)">4</button>
+                    <button onclick="setColor(this)">5</button>
+                    <button onclick="setColor(this)">6</button>
+                    <button onclick="setColor(this)">7</button>
 
                     <h2>Mycel</h2>
-                    <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
-
+                    <button onclick="setColor(this)">1</button>
+                    <button onclick="setColor(this)">2</button>
+                    <button onclick="setColor(this)">3</button>
+                    <button onclick="setColor(this)">4</button>
+                    <button onclick="setColor(this)">5</button>
+                    <button onclick="setColor(this)">6</button>
+                    <button onclick="setColor(this)">7</button>
 
                     <h2>Glume</h2>
-                    <button class="button">1</button> <button class="button">2</button> <button class="button">3</button> <button class="button">4</button> <button class="button">5</button> <button class="button">6</button> <button class="button">7</button>
+                    <button onclick="setColor(this)">1</button>
+                    <button onclick="setColor(this)">2</button>
+                    <button onclick="setColor(this)">3</button>
+                    <button onclick="setColor(this)">4</button>
+                    <button onclick="setColor(this)">5</button>
+                    <button onclick="setColor(this)">6</button>
+                    <button onclick="setColor(this)">7</button>
                 </div>
             </div>
             <footer class="footer">
