--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
     </div>
 
     <div class="container-fluid">
+
+                        <div id="color" class="sticky-top">
+                    <i class="fas fa-moon" title="toggle font color"></i>
+                </div>
         <center>
             <img src="https://i.imgur.com/8bPJcxD.png" title="Quests">
             <div class="trout">
-                <div id="color">
-                    <i class="fas fa-moon" title="toggle font color"></i>
-                </div>
+
                 <a data-toggle="collapse" href="#louise">
                     <h1>Louise Hill</h1>
                 </a>
