--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-
     <div id="wrapperHeader">
         <div id="header" title="Dappervolk logo">
         </div>
@@ -23,8 +22,7 @@
 
     <div class="container-fluid">
         <center>
-            <img src="https://i.imgur.com/8bPJcxD.png" title="Quests">
-
+            <button id="reset" title="Reset progress">Reset</button>
             <div id="color">
                 <i class="fas fa-moon" title="toggle font color"></i>
             </div>
