reset button fixes
reset function removed until needed,
new button placed at top to refresh

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
     <div class="container-fluid">
         <center>
-            <button id="reset" title="Reset progress">Reset</button>
+            <button onclick=location=URL>Reset</button>
+            <!-- reset button not needed until we can create a saveState for buttons! -->
+            <!-- currently this button only refreshes the page                        -->
             <div id="color">
                 <i class="fas fa-moon" title="toggle font color"></i>
             </div>
