Changed toggle button to toggle high contrast mode instead of just text Made reset button round Made background local to git

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
     <div class="container">
         <center>
-            <button onclick=location=URL>Reset</button>
+            <button class ="reset" onclick=location=URL>Reset</button>
             <!-- reset button not needed until we can create a saveState for buttons! -->
             <!-- currently this button only refreshes the page                        -->
             <div id="color">
-                <i class="fas fa-moon" title="toggle font color"></i>
+                <i class="fas fa-moon" title="toggle contrast"></i>
             </div>
             <div class="trout">
 
