Collapsed by default, h1 hover color added Signed-off-by: raeliens <23226442+raeliens@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <h1>Louise Hill</h1>
                 </a>
 
-                <div class="collapsed show" id="louise">
+                <div class="collapse" id="louise">
                     <h2>Old Farmhand</h2>
                     <div class="heart"></div>
                     <br>
@@ -118,7 +118,7 @@
                 <a data-toggle="collapse" href="#threes">
                     <h1>Three's Forest</h1>
                 </a>
-                <div class="collapsed show" id="threes">
+                <div class="collapse" id="threes">
 
                     <h2>Magdalene</h2>
                     <div class="heart"></div>
@@ -204,7 +204,7 @@
                 <a data-toggle="collapse" href="#mine">
                     <h1>Silvie's Mine</h1>
                 </a>
-                <div class="collapsed show" id="mine">
+                <div class="collapse" id="mine">
 
                     <h2>Thomas & Pascal</h2>
                     <div class="heart"></div>
@@ -289,7 +289,7 @@
                 <a data-toggle="collapse" href="#cove">
                     <h1>Aviar Cove</h1>
                 </a>
-                <div class="collapsed show" id="cove">
+                <div class="collapse" id="cove">
 
                     <h2>Carneau</h2>
                     <div class="heart"></div>
